# gpt-cli

./: Cargo.toml  Dockerfile  Dockerfile.dev  Makefile  docker-compose.yml
src/: api.rs  app.rs  loader.rs  logger.rs  main.rs
src/api/: model.rs
