[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
etcetera = "0.8.0"
hyper = { version = "0.14.27", features = ["full"] }
hyper-tls = "0.5.0"
rustyline = "12.0.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
